Corrected Twitter icon styling (dark mode), changed Prism theme

--- a/setup/default.css
+++ b/setup/default.css
@@ -405,7 +405,8 @@ p#fd-meta span a[href^='https://twitter.com/']::after {
 		color: #bbb;
 	}
 
-	header h1 img {
+	header h1 img,
+	p#fd-meta span a[href^='https://twitter.com/']::after {
 		filter: invert(1);
 	}
 
